@@ -1303,7 +1303,7 @@
         <blockquote>
           <code>$ <strong>tuxpaint-import grandma.jpg</strong><br>
           grandma.jpg -&gt;
-          /home/username/.tuxpaint/saved/20210205160922.png<br>
+          /home/username/.tuxpaint/saved/20210205175230.png<br>
           jpegtopnm: WRITING A PPM FILE</code>
         </blockquote>
 
@@ -1351,7 +1351,7 @@
         </ul>
 
         <p>
-          Example: "<code>20210205160922</code>.png", for  5 February 2021 at 16:09:22.        </p>
+          Example: "<code>20210205175230</code>.png", for  5 February 2021 at 17:52:30.        </p>
 
         <p>
           Place this PNG file in your Tux Paint "<code>saved</code>" directory/folder. (See above.)        </p>
