@@ -25,7 +25,7 @@
       </p>
 
       <p>
-        22 enero 2021      </p>
+         5 febrero 2021      </p>
     </center>
 
     <hr size="2"
@@ -951,6 +951,15 @@
 
           <p>
             NOTES: You must separate decimal values with spaces, and begin hexadecimal values with a pound/number-sign character ("<code>#</code>"). In 3-digit hexadecimal, each digit is used for both the high and low halves of the byte, so "<code>#FFF</code>" is the same as "<code>#FFFFFF</code>", not "<code>#F0F0F0</code>".          </p>
+        </dd>
+
+        <dt>
+          <code><b>colorsrows=<i>ROWS</i></b></code>
+        </dt>
+
+        <dd>
+          <p>
+            How many rows of color palette buttons to show; useful when using a large color palette (see "<code>colorfile</code>", above), and/or for use with coarse input devices (like eyegaze trackers).          </p>
         </dd>
 
         <dt>
