@@ -164,7 +164,7 @@ wheelmouse,          POSBOOL(wheely)
 windowed,            NEGBOOL(fullscreen)
 windowsize,          MULTI(parsertmp_windowsize)
 buttonsize,          MULTI(button_size)
-colorsrows,           MULTI(colors_rows)
+colorsrows,          MULTI(colors_rows)
 mouse-accessibility, POSBOOL(mouseaccessibility)
 onscreen-keyboard,   POSBOOL(onscreen_keyboard)
 onscreen-keyboard-layout,         MULTI(onscreen_keyboard_layout)
